--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -20,6 +20,8 @@
   --blue:#5b6cff;
   --purple:#7c4dff;
   --green:#34d399;
+
+  --shadow: 0 26px 90px rgba(0,0,0,.55);
 }
 
 *{box-sizing:border-box}
@@ -177,23 +179,8 @@ body{
 }
 .helloTitle{font-weight:1000;font-size:18px}
 .helloSub{font-size:12px;font-weight:900;opacity:.92}
-.helloRight{display:flex;align-items:center;gap:10px}
-.idChip{
-  padding:8px 12px;border-radius:999px;
-  background:rgba(255,255,255,.18);
-  border:1px solid rgba(255,255,255,.22);
-  font-weight:1000;font-size:12px;
-}
-.logoutBtn{
-  width:46px;height:46px;border-radius:999px;border:none;
-  cursor:pointer;
-  background:rgba(239,68,68,0.95);
-  color:#fff;
-  font-weight:1000;
-  box-shadow:0 16px 40px rgba(239,68,68,.22);
-}
 
-/* ✅ TradingView ticker */
+/* ===== Ticker + Cards ===== */
 .tickerFloat{
   margin-top:12px;
   border-radius:18px;
@@ -216,7 +203,6 @@ body{
 .tickerHint{color:rgba(234,240,255,.50);font-size:12px;font-weight:900}
 .tickerFrame{width:100%;height:54px;border:0;display:block;background:transparent}
 
-/* ===== BALANCE CARD ===== */
 .balanceCard{
   margin-top:14px;
   border-radius:22px;
@@ -264,7 +250,6 @@ body{
 .aSupport{background:linear-gradient(180deg,#38bdf8,#5b6cff)}
 .aText{font-weight:1000;font-size:13px}
 
-/* ===== GLASS BOX ===== */
 .box{
   border:1px solid rgba(255,255,255,.12);
   border-radius:22px;
@@ -292,61 +277,128 @@ body{
   .actionGrid{grid-template-columns:repeat(2,1fr)}
 }
 
-/* ===== SIDEBAR ===== */
+/* =========================================================
+   ✅ PREMIUM SIDEBAR (same style as profile.html)
+   ========================================================= */
 .overlay{
   position:fixed; inset:0;
   background:rgba(0,0,0,.65);
   display:none; z-index:999;
   backdrop-filter: blur(4px);
 }
+.overlay.show{display:block;}
+
 .sidebar{
-  position:fixed; top:0; left:-290px;
-  width:270px; height:100vh;
-  background:linear-gradient(180deg, rgba(5,10,24,1), rgba(2,6,23,1));
-  border-right:1px solid rgba(255,255,255,.12);
+  position:fixed; top:0; left:-315px;
+  width:292px; height:100vh;
   padding:16px;
-  transition:.28s ease;
   z-index:1000;
-  box-shadow:0 20px 80px rgba(0,0,0,.6);
+  transition: .28s ease;
+  border-right:1px solid rgba(255,255,255,.10);
+  background:
+    radial-gradient(900px 420px at 15% 10%, rgba(91,108,255,.18), transparent 55%),
+    radial-gradient(900px 420px at 90% 20%, rgba(52,211,153,.12), transparent 55%),
+    linear-gradient(180deg, rgba(4,8,20,0.98), rgba(2,6,23,0.98));
+  box-shadow:0 26px 90px rgba(0,0,0,.60);
+  backdrop-filter: blur(16px);
 }
 .sidebar.open{ left:0; }
-.overlay.show{ display:block; }
-.brandRow{display:flex;justify-content:space-between;align-items:center;margin-bottom:12px}
-.brandSide{font-weight:1000;font-size:18px;letter-spacing:.6px;}
+
+.sideTop{
+  display:flex;align-items:center;justify-content:space-between;
+  gap:10px;margin-bottom:12px;
+}
+.sideBrand{
+  display:flex;align-items:center;gap:10px;
+  font-weight:1000;font-size:16px;letter-spacing:.9px;
+  color:#fff;
+  padding:10px 12px;border-radius:16px;
+  border:1px solid rgba(255,255,255,.10);
+  background:linear-gradient(90deg, rgba(109,87,255,.85), rgba(124,77,255,.85));
+  box-shadow:0 16px 50px rgba(109,87,255,.18);
+  min-width:170px;
+}
+.sideBrandIcon{
+  width:30px;height:30px;border-radius:12px;
+  display:grid;place-items:center;
+  background:rgba(255,255,255,.16);
+  border:1px solid rgba(255,255,255,.20);
+}
 .closeBtn{
   background:rgba(0,0,0,.22);
   border:1px solid rgba(255,255,255,.14);
-  color:var(--text);
-  border-radius:12px;padding:8px 12px;
+  color:rgba(234,240,255,.95);
+  border-radius:14px;
+  width:44px;height:44px;
+  cursor:pointer;
+  display:grid;place-items:center;
   font-weight:1000;
 }
+.closeBtn:hover{background:rgba(255,255,255,.08)}
+
 .userTag{
-  padding:12px;border-radius:16px;
-  border:1px solid rgba(255,255,255,.12);
-  background:rgba(255,255,255,.06);
-  margin-bottom:12px;
+  padding:12px 12px;
+  border-radius:18px;
+  border:1px solid rgba(255,255,255,.10);
+  background:linear-gradient(180deg, rgba(255,255,255,.08), rgba(255,255,255,.03));
+  box-shadow:0 18px 55px rgba(0,0,0,.35);
+  margin:10px 0 14px;
 }
+.userTag .t1{color:rgba(234,240,255,.55);font-weight:1000;font-size:12px}
+.userTag .t2{margin-top:6px;font-weight:1000}
+
+.menuGroupTitle{
+  margin:10px 0 8px;
+  font-size:12px;font-weight:1000;
+  color:rgba(234,240,255,.50);
+  letter-spacing:.8px;
+  text-transform:uppercase;
+}
+
 .sideItem{
-  display:flex;gap:10px;align-items:center;
-  padding:12px;
-  border:1px solid rgba(255,255,255,.12);
-  border-radius:16px;margin-bottom:10px;
-  color:var(--text);
-  background:rgba(0,0,0,.22);
-  font-weight:1000;
+  display:flex;align-items:center;gap:12px;
+  padding:12px 12px;
+  border-radius:18px;
+  color:rgba(234,240,255,.82);
   text-decoration:none;
+  font-weight:1000;
+  border:1px solid rgba(255,255,255,.10);
+  background:rgba(0,0,0,.22);
+  box-shadow:0 16px 40px rgba(0,0,0,.35);
+  margin-bottom:10px;
+  position:relative;
+  overflow:hidden;
 }
 .sideItem:hover{background:rgba(255,255,255,.08)}
-.activeLink{border:1px solid rgba(56,189,248,.55);background:rgba(56,189,248,0.12);}
+.sideItem .i{
+  width:42px;height:42px;border-radius:16px;
+  display:grid;place-items:center;
+  border:1px solid rgba(255,255,255,.12);
+  background:rgba(255,255,255,.06);
+  font-size:18px;
+}
+.sideItem small{display:block;color:rgba(234,240,255,.55);font-size:12px;font-weight:900;margin-top:2px}
+
+.activeLink{
+  border:1px solid rgba(56,189,248,.55);
+  background:linear-gradient(180deg, rgba(56,189,248,0.14), rgba(56,189,248,0.08));
+  color:#cfefff;
+}
+.activeLink::after{
+  content:"";
+  position:absolute; inset:0;
+  background: radial-gradient(600px 160px at 30% 20%, rgba(56,189,248,.20), transparent 60%);
+  pointer-events:none;
+}
+
 .sideLogout{
+  margin-top:10px;
   background:linear-gradient(90deg, rgba(248,113,113,1), rgba(239,68,68,1));
   color:#020617;border:none;width:100%;
-  padding:14px;border-radius:16px;font-weight:1000;cursor:pointer
+  padding:14px;border-radius:18px;font-weight:1000;cursor:pointer;
+  box-shadow:0 18px 55px rgba(239,68,68,.18);
 }
-.sideDivider{
-  height:1px;background:rgba(255,255,255,.10);
-  margin:12px 0;
-}
+.sideLogout:hover{filter:brightness(1.03)}
 
 /* ===== BOTTOM NAV ===== */
 .bottomNav{
@@ -404,29 +456,80 @@ body{
 
 <div id="overlay" class="overlay" onclick="closeMenu()"></div>
 
+<!-- ✅ PREMIUM SIDEBAR -->
 <div id="sidebar" class="sidebar">
-  <div class="brandRow">
-    <div class="brandSide">COINLUXORA</div>
+  <div class="sideTop">
+    <div class="sideBrand">
+      <div class="sideBrandIcon">◈</div>
+      COINLUXORA
+    </div>
     <button class="closeBtn" onclick="closeMenu()">✕</button>
   </div>
 
   <div class="userTag">
-    <div class="small">Logged in as</div>
-    <div id="sideName" style="font-weight:1000;margin-top:6px;">---</div>
+    <div class="t1">Logged in as</div>
+    <div id="sideName" class="t2">---</div>
   </div>
 
-  <a class="sideItem activeLink" href="user-dashboard.html">🏠 Dashboard</a>
-  <a class="sideItem" href="portfolio.html">📊 Portfolio</a>
-  <a class="sideItem" href="plans.html">💼 Investment Plans</a>
-  <a class="sideItem" href="support.html">🧑‍💻 Support / Contact</a>
-  <a class="sideItem" href="deposits.html">💳 Deposit</a>
-  <a class="sideItem" href="withdraw.html">➡ Withdraw Funds</a>
+  <div class="menuGroupTitle">Navigation</div>
 
-  <div class="sideDivider"></div>
+  <a class="sideItem activeLink" href="user-dashboard.html">
+    <div class="i">🏠</div>
+    <div>
+      Dashboard
+      <small>Main overview</small>
+    </div>
+  </a>
 
-  <a class="sideItem" href="profile.html">👤 Profile / Settings</a>
+  <a class="sideItem" href="portfolio.html">
+    <div class="i">📊</div>
+    <div>
+      Portfolio
+      <small>Your assets</small>
+    </div>
+  </a>
 
-  <div style="height:12px"></div>
+  <a class="sideItem" href="deposits.html">
+    <div class="i">💳</div>
+    <div>
+      Deposit
+      <small>Fund your account</small>
+    </div>
+  </a>
+
+  <a class="sideItem" href="withdraw.html">
+    <div class="i">➡</div>
+    <div>
+      Withdraw Funds
+      <small>Request payout</small>
+    </div>
+  </a>
+
+  <!-- ✅ Support below Withdraw -->
+  <a class="sideItem" href="support.html">
+    <div class="i">🧑‍💻</div>
+    <div>
+      Support / Contact
+      <small>Tickets & help</small>
+    </div>
+  </a>
+
+  <a class="sideItem" href="plans.html">
+    <div class="i">💼</div>
+    <div>
+      Investment Plans
+      <small>Start investing</small>
+    </div>
+  </a>
+
+  <a class="sideItem" href="profile.html">
+    <div class="i">👤</div>
+    <div>
+      Profile / Settings
+      <small>Account security</small>
+    </div>
+  </a>
+
   <button class="sideLogout" onclick="logout()">Logout</button>
 </div>
 
@@ -455,7 +558,11 @@ body{
           <div class="miniChip">🟢 active</div>
           <div class="miniChip">🇳🇬 NG</div>
         </div>
-        <div class="helloTitle">Hello! 🌙</div>
+
+        <!-- ✅ Greeting changes based on time -->
+        <div class="helloTitle" id="greetingTitle">Greetings…</div>
+
+        <!-- ✅ Only show name here (no "logged in as") -->
         <div class="helloSub" id="helloName">Loading…</div>
       </div>
     </div>
@@ -597,6 +704,27 @@ function hideGate(){
   if(g) g.style.display="none";
 }
 
+/* ✅ Greeting based on time */
+function setGreeting(){
+  const h = new Date().getHours();
+  let text = "Greetings";
+  let emoji = "✨";
+
+  if(h >= 5 && h < 12){
+    text = "Good Morning";
+    emoji = "🌞";
+  }else if(h >= 12 && h < 17){
+    text = "Good Afternoon";
+    emoji = "☀️";
+  }else{
+    text = "Good Evening";
+    emoji = "🌙";
+  }
+
+  const el = document.getElementById("greetingTitle");
+  if(el) el.textContent = `${text} ${emoji}`;
+}
+
 /* ✅ Avatar into circle button */
 function setTopAvatar(avatarUrl){
   const fallback = document.getElementById("avatarFallback");
@@ -614,15 +742,17 @@ function setTopAvatar(avatarUrl){
   }
 }
 
-/* ✅ Name loader */
+/* ✅ Name in dashboard + sidebar */
 function setNameEverywhere(fullName){
   const nice = (fullName && fullName.trim()) ? fullName.trim() : "User";
 
+  // dashboard shows name only
   const hello = document.getElementById("helloName");
-  const side  = document.getElementById("sideName");
+  if(hello) hello.innerHTML = `<span class="ok">${nice}</span>`;
 
-  if(hello) hello.innerHTML = `Logged in as: <span class="ok">${nice}</span>`;
-  if(side)  side.innerText = nice;
+  // sidebar shows Logged in as name
+  const side  = document.getElementById("sideName");
+  if(side) side.textContent = nice;
 }
 
 /* ✅ Load name + avatar from DB (fallback to metadata) */
@@ -631,7 +761,6 @@ async function loadDashboardIdentity(){
     let fullName = "";
     let avatarUrl = "";
 
-    // DB first
     const { data: row, error } = await supabaseClient
       .from("users")
       .select("full_name, avatar_url")
@@ -643,7 +772,6 @@ async function loadDashboardIdentity(){
       avatarUrl = row.avatar_url || "";
     }
 
-    // fallback metadata
     const u = window.COINLUXORA_USER;
     const md = u?.user_metadata || {};
     if(!fullName) fullName = md.full_name || "User";
@@ -741,7 +869,9 @@ function initWithUser(user){
   currentUserEmail=user.email;
   currentUserId=user.id;
 
-  // ID chip still ok
+  // greeting based on time
+  setGreeting();
+
   document.getElementById("userIdChip").innerText = "ID: " + currentUserId.slice(0,6).toUpperCase();
 
   hideGate();
