--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -144,10 +144,6 @@ body{
   backdrop-filter: blur(10px);
 }
 .iconBtn:hover{background:rgba(255,255,255,.08)}
-.iconBtn.primary{
-  background:linear-gradient(180deg, rgba(109,87,255,1), rgba(124,77,255,1));
-  border:none;
-}
 
 /* ====== HELLO CARD ====== */
 .helloCard{
@@ -180,7 +176,7 @@ body{
 .helloTitle{font-weight:1000;font-size:18px}
 .helloSub{font-size:12px;font-weight:900;opacity:.92}
 
-/* ✅ Right side stays as before */
+/* ✅ Right side stays as before + time/date under it */
 .helloRight{
   display:flex;
   flex-direction:column;
@@ -202,8 +198,7 @@ body{
   font-weight:1000;
   box-shadow:0 16px 40px rgba(239,68,68,.22);
 }
-/* ✅ time display below */
-.timeChip{
+.timeChip, .dateChip{
   padding:6px 10px;border-radius:999px;
   background:rgba(255,255,255,.16);
   border:1px solid rgba(255,255,255,.20);
@@ -234,6 +229,7 @@ body{
 .tickerHint{color:rgba(234,240,255,.50);font-size:12px;font-weight:900}
 .tickerFrame{width:100%;height:54px;border:0;display:block;background:transparent}
 
+/* ===== BALANCE CARD ===== */
 .balanceCard{
   margin-top:14px;
   border-radius:22px;
@@ -382,7 +378,11 @@ body{
 }
 .userTagLeft{min-width:0}
 .userTag .t1{color:rgba(234,240,255,.55);font-weight:1000;font-size:12px}
-.userTag .t2{margin-top:6px;font-weight:1000;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;max-width:180px;}
+.userTag .t2{
+  margin-top:6px;font-weight:1000;
+  white-space:nowrap;overflow:hidden;text-overflow:ellipsis;
+  max-width:180px;
+}
 
 .sideAvatar{
   width:46px;height:46px;border-radius:999px;
@@ -517,7 +517,6 @@ body{
     <button class="closeBtn" onclick="closeMenu()">✕</button>
   </div>
 
-  <!-- ✅ user tag + avatar right -->
   <div class="userTag">
     <div class="userTagLeft">
       <div class="t1">Logged in as</div>
@@ -607,8 +606,8 @@ body{
         <button class="logoutBtn" onclick="logout()" title="Logout">⎋</button>
       </div>
 
-      <!-- ✅ time display here -->
-      <div class="timeChip" id="timeNow">--:--</div>
+      <div class="timeChip" id="timeNow">--:--:--</div>
+      <div class="dateChip" id="dateNow">--- --- ----</div>
     </div>
   </div>
 
@@ -748,18 +747,29 @@ function setGreeting(){
   if(el) el.textContent = `${text} ${emoji}`;
 }
 
-/* ✅ Live time display */
+/* ✅ Live time + date */
 function startClock(){
-  const el = document.getElementById("timeNow");
-  if(!el) return;
+  const timeEl = document.getElementById("timeNow");
+  const dateEl = document.getElementById("dateNow");
+  if(!timeEl || !dateEl) return;
+
+  const days = ["Sun","Mon","Tue","Wed","Thu","Fri","Sat"];
+  const months = ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"];
 
   const tick = ()=>{
     const now = new Date();
     const hh = String(now.getHours()).padStart(2,"0");
     const mm = String(now.getMinutes()).padStart(2,"0");
     const ss = String(now.getSeconds()).padStart(2,"0");
-    el.textContent = `${hh}:${mm}:${ss}`;
+    timeEl.textContent = `${hh}:${mm}:${ss}`;
+
+    const d = days[now.getDay()];
+    const day = String(now.getDate()).padStart(2,"0");
+    const mon = months[now.getMonth()];
+    const yr = now.getFullYear();
+    dateEl.textContent = `${d}, ${day} ${mon} ${yr}`;
   };
+
   tick();
   setInterval(tick, 1000);
 }
@@ -838,7 +848,7 @@ async function loadDashboardIdentity(){
   }
 }
 
-/* BADGES */
+/* Badges (kept exactly) */
 function setBadge(id, count){
   const el=document.getElementById(id);
   if(!el) return;
@@ -911,11 +921,9 @@ function initWithUser(user){
   startClock();
 
   document.getElementById("userIdChip").innerText = "ID: " + currentUserId.slice(0,6).toUpperCase();
-
   hideGate();
 
   loadDashboardIdentity();
-
   loadBalance();
   loadActivePlan();
   fetchPrices();
@@ -923,7 +931,7 @@ function initWithUser(user){
   subscribeToRealtimeBadges();
 }
 
-/* DATA LOADING */
+/* Load data */
 async function loadBalance(){
   const { data } = await supabaseClient.from("users").select("*").eq("email", currentUserEmail).single();
   const bal = Number(data?.balance || 0).toFixed(2);
@@ -1003,7 +1011,7 @@ async function fetchPrices(){
   }
 }
 
-/* LOGOUT */
+/* Logout */
 async function logout(){
   await supabaseClient.auth.signOut();
   window.location.replace("login.html");
